--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" output="WebContent/WEB-INF/bootstrap" path="WebContent/WEB-INF/bootstrap"/>
 	<classpathentry kind="src" output="WebContent/WEB-INF/classes" path="WebContent/WEB-INF/classes"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/main/java"/>
@@ -13,5 +14,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/bootstrap/weka/weka-1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/bootstrap/commons-io/commons-io-1.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
