--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/bootstrap/weka/weka-1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/bootstrap/commons-io/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/bootstrap/org/tartarus/snowball/snowball-stemmer-1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
