--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
 			<artifactId>archiva-rest-api</artifactId>
 			<version>1.4-M3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
