--- a/src/main/resources/webseer.properties
+++ b/src/main/resources/webseer.properties
@@ -17,5 +17,5 @@ WEBSEER_PLUGIN_DIRECTORY=../webseer-online/src/main/webapp/WEB-INF/plugins
 
 WEBSEER_BUCKET_IO=org.webseer.io.bucket.RandomAccessBucketIO
 
-WEBSEER_BUCKET_DIR=data
+WEBSEER_BUCKET_DIR=bucketData
 WEBSEER_DB_DIR=data
